<resources>
    <string name="app_name">NIT JSR GUIDE</string>
    <string name="appabout">appabout</string>
    <string name="about_app_nit_jsr_guide">About App(NIT JSR GUIDE)</string>
    <string name="phd">PhD</string>
    <string name="b_tech_dasa">B.Tech.(DASA)</string>
    <string name="msc">MSc</string>
    <string name="mca">MCA</string>
    <string name="m_tech">M.Tech.</string>
    <string name="b_tech_josaa">B.Tech.(JoSAA)</string>
    <string name="admissions">Admissions</string>
    <string name="people">People</string>
    <string name="statistics">Statistics</string>
    <string name="past_recruiters">Past Recruiters</string>
    <string name="training">Training</string>
    <string name="training_and_placement">Training and Placement</string>
    <string name="inside_campus">Inside Campus</string>
    <string name="hostels">Hostels</string>
    <string name="outside_campus">Outside Campus</string>
    <string name="academic_notify">Academic Notify</string>
    <string name="jobs_notify">Jobs Notify</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="welcome">WELCOME</string>
    <string name="over_view">Over View</string>
    <string name="textviewr">TextView</string>
    <string name="textviewr1">TextView</string>
    <string name="textviewr2">TextView</string>
    <string name="textviewr3">TextView</string>
    <string name="text">text</string>
    <string name="textviewhall">TextView</string>
    <string name="textviewinside">TextView</string>
    <string name="name">Name</string>
    <string name="area">Area</string>
    <string name="phone">Phone</string>
    <string name="rating">Rating</string>
    <string name="time">Time</string>
    <string name="calender">Calender</string>
    <string name="textviewsectionalpeople">TextView</string>
    <string name="textviewsectionplace">TextView</string>
    <string name="portfolio">portfolio</string>
    <string name="about_app">About App</string>
    <string name="developer">Developer</string>
    <string name="rate_app">Rate App</string>
    <string name="feedback">Feedback</string>
</resources>
