<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <group android:checkableBehavior="single">
      <item
          android:id="@+id/allabout"
          android:orderInCategory="1"
          app:showAsAction="never"
          android:title="@string/about_app" />

        <item
            android:id="@+id/developer"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/developer"/>

        <item
            android:id="@+id/rateapp"
            android:orderInCategory="3"
            app:showAsAction="collapseActionView"
            android:title="@string/rate_app"/>
        <item
            android:id="@+id/feedback"
            android:orderInCategory="4"
            app:showAsAction="collapseActionView"
            android:title="@string/feedback"/>
    </group>
</menu>