<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context="com.myapps.nitjsr.guide.AnimationActivity">


    <TextView
        android:id="@+id/placeText"
        android:layout_width="wrap_content"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="25sp"
        android:text="@string/training_and_placement" />

    <Button
        android:id="@+id/b1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/portfolio"
        android:textSize="20sp"
        android:textColor="@android:color/holo_purple"
        android:layout_below="@+id/placeText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/b2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignEnd="@+id/b1"
        android:textColor="@android:color/holo_purple"
        android:layout_alignRight="@+id/b1"
        android:layout_below="@+id/b1"
        android:text="@string/training" />

    <Button
        android:id="@+id/b3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_purple"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignStart="@+id/b2"
        android:layout_below="@+id/b2"
        android:text="@string/past_recruiters" />

    <Button
        android:id="@+id/b4"
        android:layout_width="200dp"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_purple"
        android:layout_alignLeft="@+id/b3"
        android:layout_alignStart="@+id/b3"
        android:layout_below="@+id/b3"
        android:text="@string/statistics" />

    <Button
        android:id="@+id/b5"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/holo_purple"
        android:layout_alignEnd="@+id/b4"
        android:layout_alignRight="@+id/b4"
        android:layout_below="@+id/b4"
        android:text="@string/people" />


</RelativeLayout>
