<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_purple"
    android:orientation="vertical">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/textview"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text"
            android:layout_alignStart="@+id/text"
            android:layout_below="@+id/text"
            android:text="@string/textview1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text1"
            android:layout_alignStart="@+id/text1"
            android:layout_below="@+id/text1"
            android:text="@string/textview2"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/text2"
            android:layout_alignStart="@+id/text2"
            android:text="@string/textview3"
            android:textSize="15sp"
            android:layout_below="@+id/text2" />
    </RelativeLayout>
